# chibi-tech-dx12

./: .clang-format  .editorconfig  .gitignore  CMakeLists.txt  LICENSE  README.md  build.bat  compile_commands.json  todo.md
code/: chibi-tech.cpp  chibi-tech.h  types.h
code/math/: color.h  math.h  simd.h
code/platform/: platform.h  platform_logger.cpp
code/platform/win32/: common_win32.cpp  common_win32.h  file_win32.cpp  logger_win32.cpp  timer_win32.cpp  window_win32.cpp
code/renderer/: simple_renderer.cpp  simple_renderer.h
code/renderer/dx12/: d3d12_common.h  d3d12_export.cpp  gfx_buffer.h  gfx_command_list.cpp  gfx_command_list.h  gfx_command_queue.cpp  gfx_command_queue.h  gfx_descriptor_allocator.cpp  gfx_descriptor_allocator.h  gfx_device.cpp  gfx_device.h  gfx_dynamic_descriptor_allocator.cpp  gfx_dynamic_descriptor_allocator.h  gfx_dynamic_descriptor_heap.cpp  gfx_dynamic_descriptor_heap.h  gfx_pso.cpp  gfx_pso.h  gfx_render_target.h  gfx_renderpass.h  gfx_resource.cpp  gfx_resource.h  gfx_root_signature.cpp  gfx_root_signature.h  gfx_shader_utils.cpp  gfx_shader_utils.h  gfx_swapchain.cpp  gfx_swapchain.h  gfx_utils.cpp  gfx_utils.h  gpu_buffer.cpp  gpu_buffer.h  gpu_command_list.cpp  gpu_command_list.h  gpu_command_queue.cpp  gpu_command_queue.h  gpu_descriptor_allocator.cpp  gpu_descriptor_allocator.h  gpu_device.cpp  gpu_device.h  gpu_dynamic_descriptor_heap.cpp  (+24 more)
code/systems/: resource_system.cpp  resource_system.h
code/util/: allocator.cpp  allocator.h  array.h  bit.h  hashmap.cpp  hashmap.h  id.h  serializer.h  str16.cpp  str16.h  str8.cpp  str8.h
content/shaders/: TestTriangle.Pxl.hlsl  TestTriangle.Vtx.hlsl
scripts/: shaders.bat
